# 2nd-SchoolPC

A01/: CMakeLists.txt
A01/include/: A01DetectorConstruction.hh  TSLCollimator.hh
A01/src/: A01DetectorConstruction.cc  TSLCollimator.cc
ANITA/: ANITA.pro  main.cpp
ANITA-build-desktop-Desktop_Qt_4_8_1_for_GCC__Qt_SDK__Release/: ANITA  Makefile
ANITA/include/: calorimeter.h  calorimeterhit.h  cellparameterisation.h  detectorconstruction.h  physicslist.h  primarygeneratoraction.h
ANITA/src/: calorimeter.cpp  calorimeterhit.cpp  cellparameterisation.cpp  detectorconstruction.cpp  physicslist.cpp  primarygeneratoraction.cpp
G4IDE/: G4IDE.cbp
Pro-CollimatorTest/: CMakeLists.txt  CMakeLists.txt.user.2.5pre1  main.cpp  run.mac  vis.mac
Pro-CollimatorTest/include/: CollimatorDetectorHit.hh  CollimatorSD.hh  EMPhysics.h  HadronPhysics.h  ProAnalysis.hh  ProDetectorConstruction.hh  ProEventAction.hh  ProGammaHit.hh  ProGammaSD.hh  ProNeutronHit.hh  ProNeutronSD.hh  ProPhysicsList.hh  ProPrimaryGeneratorAction.hh  ProRunAction.hh  TSLCollimator.hh
Pro-CollimatorTest/src/: CollimatorDetectorHit.cc  CollimatorSD.cc  EMPhysics.cpp  IonPhysics.cpp  MuonPhysics.cpp  PhysicsList.cpp  ProAnalysis.cc  ProDetectorConstruction.cc  ProEventAction.cc  ProGammaHit.cc  ProGammaSD.cc  ProNeutronHit.cc  ProNeutronSD.cc  ProPhysicsList.cc  ProPrimaryGeneratorAction.cc  ProRunAction.cc  TSLCollimator.cc
Test/: CMakeLists.txt  GeometryInformationTips.txt  Test.pro  main.cpp  vis.mac
Test-build-desktop-Desktop_Qt_4_8_1_for_GCC__Qt_SDK__Debug/: Makefile  Test
Test/include/: CellParameterisation.h  DetectorConstruction.h  DriftChamber.h  DriftChamberHit.h  EmCalorimeter.h  EmCalorimeterHit.h  EventAction.h  GammaHit.h  GammaSD.h  GeneralPhysics.h  HadCalorimeter.h  HadCalorimeterHit.h  HistoManager.h  Hodoscope.h  HodoscopeHit.h  IonPhysics.h  Monitor.h  MonitorHit.h  MuonPhysics.h  NeutronHit.h  NeutronSD.h  PhysicsList.h  PrimaryGeneratorAction.h  RunAction.h  TSLCollimator.h
Test/src/: CellParameterisation.cpp  DetectorConstruction.cpp  DriftChamber.cpp  DriftChamberHit.cpp  EmCalorimeter.cpp  EmCalorimeterHit.cpp  EventAction.cpp  GeneralPhysics.cpp  HadCalorimeter.cpp  HadCalorimeterHit.cpp  HadronPhysics.cpp  HistoManager.cpp  Hodoscope.cpp  HodoscopeHit.cpp  Monitor.cpp  MonitorHit.cpp  NeutronHit.cpp  NeutronSD.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  TSLCollimator.cpp
examples/advanced/hadrontherapy/include/: HadrontherapyAnalysisManager.hh
examples/novice/N01/: N01.cbp  N01.layout
